istio-service-mesh-control/manifests/bookinfo-destination-rules.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: productpage
  namespace: default
spec:
  host: productpage.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1

---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: reviews
  namespace: default
spec:
  host: reviews.default.svc.cluster.local

  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN

  subsets:
  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2

  - name: v3
    labels:
      version: v3

---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: ratings
  namespace: default
spec:
  host: ratings.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1

---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: details
  namespace: default
spec:
  host: details.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
