istio-service-mesh-control/manifests/ratings-resilience.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: ratings
  namespace: default
spec:
  host: ratings.default.svc.cluster.local

  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN

    connectionPool:
      tcp:
        maxConnections: 10

      http:
        http1MaxPendingRequests: 10
        http2MaxRequests: 20
        maxRequestsPerConnection: 10
        maxRetries: 3

    outlierDetection:
      consecutive5xxErrors: 3
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 100

  subsets:
  - name: v1
    labels:
      version: v1
