istio-service-mesh-control/manifests/reviews-canary-routing.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
  namespace: default
spec:
  hosts:
  - reviews.default.svc.cluster.local

  http:
  - name: equal-canary-split
    route:
    - destination:
        host: reviews.default.svc.cluster.local
        subset: v1
      weight: 50

    - destination:
        host: reviews.default.svc.cluster.local
        subset: v3
      weight: 50
