istio-service-mesh-control/manifests/reviews-user-routing.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
  namespace: default
spec:
  hosts:
  - reviews.default.svc.cluster.local

  http:
  - name: jason-to-v2
    match:
    - headers:
        end-user:
          exact: jason

    route:
    - destination:
        host: reviews.default.svc.cluster.local
        subset: v2

  - name: default-to-v1
    route:
    - destination:
        host: reviews.default.svc.cluster.local
        subset: v1
