istio-service-mesh-control/manifests/productpage-authorization.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: productpage-ingress-only
  namespace: default
spec:
  selector:
    matchLabels:
      app: productpage

  action: ALLOW

  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"

    to:
    - operation:
        methods:
        - GET
        paths:
        - /productpage
        - /static/*
        - /login
        - /logout
        - /api/v1/products/*
